--- a/.github/workflows/deploycassandra.yml
+++ b/.github/workflows/deploycassandra.yml
@@ -7,15 +7,15 @@ jobs:
     
     - uses: azure/docker-login@v1
       with:
-        login-server: acrprojectbose.azurecr.io
+        login-server: projectbosetarun.azurecr.io
         username: Projectbosetarun
         password: gpz3yvncY9HwZuAHFiS5RE5uLrC6uwZDcstv+ze851+ACRCeRFA/
     
     - name: Build and push image to ACR
       id: build-image
       run: |
-        docker build "$GITHUB_WORKSPACE/db/cassandra" -f  "db/cassandra/Dockerfile" -t acrprojectbose.azurecr.io/projectboseaks:${{ github.sha }}-cassandra --label dockerfile-path=db/cassandra/Dockerfile
-        docker push acrprojectbose.azurecr.io/projectboseaks:${{ github.sha }}-cassandra
+        docker build "$GITHUB_WORKSPACE/db/cassandra" -f  "db/cassandra/Dockerfile" -t projectbosetarun.azurecr.io/projectboseaks:${{ github.sha }}-cassandra --label dockerfile-path=db/cassandra/Dockerfile
+        docker push projectbosetarun.azurecr.io/projectboseaks:${{ github.sha }}-cassandra
 
     - uses: azure/k8s-set-context@v1
       with:
@@ -33,9 +33,9 @@ jobs:
     - uses: azure/k8s-create-secret@v1
       with:
         namespace: projectbose
-        container-registry-url: acrprojectbose.azurecr.io
-        container-registry-username: ${{ secrets.acr_acrprojectbose_username }}
-        container-registry-password: ${{ secrets.acr_acrprojectbose_password }}
+        container-registry-url: projectbosetarun.azurecr.io
+        container-registry-username: Projectbosetarun
+        container-registry-password: gpz3yvncY9HwZuAHFiS5RE5uLrC6uwZDcstv+ze851+ACRCeRFA/
         secret-name: projectboseadockerauth
        
     - uses: azure/k8s-deploy@v1.2
@@ -50,6 +50,6 @@ jobs:
           manifests/cassandraset.yaml
           manifests/cassandraservice.yaml
         images: |
-          acrprojectbose.azurecr.io/projectboseaks:${{ github.sha }}-cassandra
+          projectbosetarun.azurecr.io/projectboseaks:${{ github.sha }}-cassandra
         imagepullsecrets: |
           projectboseadockerauth
