--- a/.github/workflows/deploymysql.yml
+++ b/.github/workflows/deploymysql.yml
@@ -9,15 +9,15 @@ jobs:
     
     - uses: azure/docker-login@v1
       with:
-        login-server: acrprojectbose.azurecr.io
+        login-server: projectbosetarun.azurecr.io
         username: Projectbosetarun
         password: gpz3yvncY9HwZuAHFiS5RE5uLrC6uwZDcstv+ze851+ACRCeRFA/
     
     - name: Build and push image to ACR
       id: build-image
       run: |
-        docker build "$GITHUB_WORKSPACE/db/mysql" -f  "db/mysql/Dockerfile" -t acrprojectbose.azurecr.io/projectboseaks:${{ github.sha }}-mysql --label dockerfile-path=db/mysql/Dockerfile
-        docker push acrprojectbose.azurecr.io/projectboseaks:${{ github.sha }}-mysql
+        docker build "$GITHUB_WORKSPACE/db/mysql" -f  "db/mysql/Dockerfile" -t projectbosetarun.azurecr.io/projectboseaks:${{ github.sha }}-mysql --label dockerfile-path=db/mysql/Dockerfile
+        docker push projectbosetarun.azurecr.io/projectboseaks:${{ github.sha }}-mysql
     
     - uses: azure/k8s-set-context@v1
       with:
@@ -35,7 +35,7 @@ jobs:
     - uses: azure/k8s-create-secret@v1
       with:
         namespace: projectbose
-        container-registry-url: acrprojectbose.azurecr.io
+        container-registry-url: projectbosetarun.azurecr.io
         container-registry-username: ${{ secrets.acr_acrprojectbose_username }}
         container-registry-password: ${{ secrets.acr_acrprojectbose_password }}
         secret-name: projectboseadockerauth
