--- a/.github/workflows/LeveldetailsAPIWF.yml
+++ b/.github/workflows/LeveldetailsAPIWF.yml
@@ -11,15 +11,15 @@ jobs:
     
     - uses: azure/docker-login@v1
       with:
-        login-server: acrprojectbose.azurecr.io
+        login-server: projectbosetarun.azurecr.io
         username: Projectbosetarun
         password: gpz3yvncY9HwZuAHFiS5RE5uLrC6uwZDcstv+ze851+ACRCeRFA/
     
     - name: Build and push image to ACR        
       id: build-image
       run: |
-        docker build "$GITHUB_WORKSPACE/api/API/LeveldetailsAPI" -f  "api/API/LeveldetailsAPI/Dockerfile" -t acrprojectbose.azurecr.io/projectboseaks:${{ github.sha }}-leveldetails --label dockerfile-path=api/API/LeveldetailsAPI/Dockerfile
-        docker push acrprojectbose.azurecr.io/projectboseaks:${{ github.sha }}-leveldetails
+        docker build "$GITHUB_WORKSPACE/api/API/LeveldetailsAPI" -f  "api/API/LeveldetailsAPI/Dockerfile" -t projectbosetarun.azurecr.io/projectboseaks:${{ github.sha }}-leveldetails --label dockerfile-path=api/API/LeveldetailsAPI/Dockerfile
+        docker push projectbosetarun.azurecr.io/projectboseaks:${{ github.sha }}-leveldetails
     
     - uses: azure/k8s-set-context@v1
       with:
@@ -37,7 +37,7 @@ jobs:
     - uses: azure/k8s-create-secret@v1
       with:
         namespace: ${{ env.NAMESPACE  }}
-        container-registry-url: acrprojectbose.azurecr.io
+        container-registry-url: projectbosetarun.azurecr.io
         container-registry-username: ${{ secrets.acr_acrprojectbose_username }}
         container-registry-password: ${{ secrets.acr_acrprojectbose_password }}
         secret-name: projectboseadockerauth
@@ -49,6 +49,6 @@ jobs:
           manifests/deployLeveldetailsAPI.yml
           manifests/serviceLeveldetailsAPI.yml
         images: |
-          acrprojectbose.azurecr.io/projectboseaks:${{ github.sha }}-leveldetails
+          projectbosetarun.azurecr.io/projectboseaks:${{ github.sha }}-leveldetails
         imagepullsecrets: |
           projectboseadockerauth
