--- a/.github/workflows/PreparedataAPIWF.yml
+++ b/.github/workflows/PreparedataAPIWF.yml
@@ -11,15 +11,15 @@ jobs:
     
     - uses: azure/docker-login@v1
       with:
-        login-server: acrprojectbose.azurecr.io
+        login-server: projectbosetarun.azurecr.io
         username: Projectbosetarun
         password: gpz3yvncY9HwZuAHFiS5RE5uLrC6uwZDcstv+ze851+ACRCeRFA/
     
     - name: Build and push image to ACR
       id: build-image
       run: |
-        docker build "$GITHUB_WORKSPACE/api/API/PrepareDataAPI" -f  "api/API/PrepareDataAPI/Dockerfile" -t acrprojectbose.azurecr.io/projectboseaks:${{ github.sha }}-preparedata --label dockerfile-path=api/API/PrepareDataAPI/Dockerfile
-        docker push acrprojectbose.azurecr.io/projectboseaks:${{ github.sha }}-preparedata
+        docker build "$GITHUB_WORKSPACE/api/API/PrepareDataAPI" -f  "api/API/PrepareDataAPI/Dockerfile" -t projectbosetarun.azurecr.io/projectboseaks:${{ github.sha }}-preparedata --label dockerfile-path=api/API/PrepareDataAPI/Dockerfile
+        docker push projectbosetarun.azurecr.io/projectboseaks:${{ github.sha }}-preparedata
     
     - uses: azure/k8s-set-context@v1
       with:
@@ -37,7 +37,7 @@ jobs:
     - uses: azure/k8s-create-secret@v1
       with:
         namespace: ${{ env.NAMESPACE  }}
-        container-registry-url: acrprojectbose.azurecr.io
+        container-registry-url: projectbosetarun.azurecr.io
         container-registry-username: ${{ secrets.acr_acrprojectbose_username }}
         container-registry-password: ${{ secrets.acr_acrprojectbose_password }}
         secret-name: projectboseadockerauth
@@ -49,6 +49,6 @@ jobs:
           manifests/deployPreparedataAPI.yml
           manifests/servicePreparedataAPI.yml
         images: |
-          acrprojectbose.azurecr.io/projectboseaks:${{ github.sha }}-preparedata
+          projectbosetarun.azurecr.io/projectboseaks:${{ github.sha }}-preparedata
         imagepullsecrets: |
           projectboseadockerauth
