--- a/manifests/deployLeveldetailsAPI.yml
+++ b/manifests/deployLeveldetailsAPI.yml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: "leveldetailsdeploy"
-          image: "acrprojectbose.azurecr.io/projectboseaks"
+          image: "projectbosetarun.azurecr.io/projectboseaks"
           ports:
           - containerPort: 80
