--- a/manifests/deployResourcedetailsAPI.yml
+++ b/manifests/deployResourcedetailsAPI.yml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: "resourcedetailsdeploy"
-          image: "acrprojectbose.azurecr.io/projectboseaks"
+          image: "projectbosetarun.azurecr.io/projectboseaks"
           ports:
           - containerPort: 80
